# multiomics2026

./: .gitignore  LICENSE  README.md  pyproject.toml
.preparation/: README.md  extract_data.py  extract_rdata.R
docs/: study_summary.md
project-scripts/: README.md
results/: model1_0.001_CVXOPT_300_edges.tsv  model1_0.001_CVXOPT_300_nodes.tsv  model1_0.001_HIGHS_300_edges.tsv  model1_0.001_HIGHS_500_nodes.tsv  model1_0.01_CVXOPT_300_edges.tsv  model1_0.01_CVXOPT_300_nodes.tsv  model1_0.01_CVXOPT_500_edges.tsv  model1_0.01_GLPK_300_edges.tsv  model1_0.01_GLPK_300_nodes.tsv  model1_0.01_GLPK_500_nodes.tsv  model1_0.01_HIGHS_500_edges.tsv  model1_0.01_HIGHS_500_nodes.tsv  model1_0.1_GLPK_500_edges.tsv  model1_0.1_HIGHS_500_edges.tsv  model1_0.1_HIGHS_500_nodes.tsv  model1_edges.tsv  model1_nodes.tsv  model2_0.001_CVXOPT_300_edges.tsv  model2_0.001_CVXOPT_300_nodes.tsv  model2_0.001_HIGHS_300_edges.tsv  model2_0.001_HIGHS_300_nodes.tsv  model2_0.01_CVXOPT_300_edges.tsv  model2_0.01_CVXOPT_300_nodes.tsv  model2_0.01_CVXOPT_500_edges.tsv  model2_0.01_GLPK_MI_300_nodes.tsv  model2_0.01_GLPK_MI_500_edges.tsv  model2_0.01_GLPK_MI_500_nodes.tsv  model2_0.01_HIGHS_300_edges.tsv  model2_0.01_HIGHS_300_nodes.tsv  model2_0.01_HIGHS_500_edges.tsv  model2_0.01_HIGHS_500_nodes.tsv  model2_0.1_CVXOPT_300_edges.tsv  model2_0.1_CVXOPT_300_nodes.tsv  model2_0.1_CVXOPT_500_edges.tsv  model2_0.1_CVXOPT_500_nodes.tsv  model2_0.1_HIGHS_300_edges.tsv  model2_0.1_HIGHS_300_nodes.tsv  model2_0.1_HIGHS_500_edges.tsv  model2_0.1_HIGHS_500_nodes.tsv  model2_edges.tsv  (+49 more)
scripts/: 02_TD.py  03_TD.py  (+10 more)
(+46 files in other folders)
